compare BFS and Q learning results

--- a/heisenberg_group/Neural_Nets/heisenberg_NN_Q_learning.ipynb
+++ b/heisenberg_group/Neural_Nets/heisenberg_NN_Q_learning.ipynb
@@ -120,6 +120,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"../Data_Generation/Data_files/Q_moves_scores.csv\")\n",
+    "df = df.drop('num_moves_Q_learning_needs', axis=1)\n",
     "df = df.drop(\"Q_table_val\", axis=1)"
    ]
   },
@@ -1204,7 +1205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(\"../Data_Generation/Data_files/Q_moves_scores.csv\")\n",
+    "test_df = pd.read_csv(\"../Data_Generation/Data_files/Q_moves_scores_test.csv\")\n",
+    "test_df = test_df.drop('num_moves_Q_learning_needs', axis=1)\n",
     "test_df = test_df.drop(\"Q_table_val\", axis=1)\n",
     "just_input_test = test_df.drop('first_move_by_Q_learning', axis=1)\n",
     "just_input_test = just_input_test.drop('last_matrix', axis=1)\n",
