--- a/heisenberg_group/Neural_Nets/heisenberg_NN_Q_learning_learn_value.ipynb
+++ b/heisenberg_group/Neural_Nets/heisenberg_NN_Q_learning_learn_value.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../Data_Generation/Data_files/Q_moves_scores.csv\")"
+    "df = pd.read_csv(\"../Data_Generation/Data_files/Q_moves_scores.csv\")\n",
+    "df = df.drop('num_moves_Q_learning_needs', axis=1)"
    ]
   },
   {
@@ -1223,6 +1224,7 @@
    "outputs": [],
    "source": [
     "test_df = pd.read_csv(\"../Data_Generation/Data_files/Q_moves_scores_test.csv\")\n",
+    "test_df = test_df.drop('num_moves_Q_learning_needs', axis=1)\n",
     "just_input_test = test_df.drop('first_move_by_Q_learning', axis=1)\n",
     "just_input_test = just_input_test.drop('Q_table_val', axis=1)\n",
     "just_input_test = just_input_test.drop('last_matrix', axis=1)\n",
@@ -1497,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1510,6 +1512,36 @@
     "D = np.array([[1, 0, 0], [0, 1, -1], [0, 0, 1]])\n",
     "\n",
     "identity = np.array([[1, 0, 0], [0, 1, 0], [0, 0, 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2, -2],\n",
+       "       [ 0,  1, -1],\n",
+       "       [ 0,  0,  1]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "A@A@D"
    ]
   },
   {
