--- a/Euclidean/Alex/deep_mcts.ipynb
+++ b/Euclidean/Alex/deep_mcts.ipynb
@@ -55,12 +55,6 @@
     "        self.depth = depth\n",
     "        self.children = [None] * n_children\n",
     "        self.is_terminal = terminal(self.state)\n",
-    "        # set end game state to best value?\n",
-    "        # todo figure out how to account for number of steps taken\n",
-    "        if self.is_terminal:\n",
-    "            self.value = 1\n",
-    "        else:\n",
-    "            self.value = value\n",
     "        self.subtree_value = torch.zeros(1)\n",
     "\n",
     "    def __str__(self):\n",
@@ -76,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "8031c754a4dbbeae",
    "metadata": {
     "ExecuteTime": {
@@ -95,6 +89,7 @@
     "        self.value_fn = value_fn\n",
     "        self.max_depth = 0\n",
     "        self.terminal = None    # None if no terminal state found; terminal Node if found\n",
+    "        self.root = None\n",
     "\n",
     "    def pick_child(self, node):\n",
     "        # UCT\n",
@@ -130,14 +125,15 @@
     "        # if unexplored or non-terminal, get value\n",
     "        state = torch.tensor(self.actions[i](node.state.flatten()), dtype=torch.float)\n",
     "        state = state.reshape(node.state.shape)\n",
-    "        child_val = self.value_fn(state)\n",
+    "        child_val = self.value_fn(state) - node.depth - 1  # give penalty -1 for each additional step taken\n",
     "        child_val = child_val.flatten()[0]\n",
-    "        if child_val is torch.nan:\n",
-    "            pass    # debugging\n",
     "        node.children[i] = Node(node, state, len(self.actions), value=child_val, depth=node.depth+1)\n",
     "\n",
     "        # if new Node is terminal, take it as the tree's terminal if it takes less time to reach than current terminal\n",
-    "        if node.children[i].is_terminal and (self.terminal is None or node.children[i].depth < self.terminal.depth):\n",
+    "        if node.children[i].is_terminal:\n",
+    "            # if terminal, add reward of ||start_vec||_2^2\n",
+    "            node.children[i].value += torch.linalg.vector_norm(torch.square(self.root.state)).item()\n",
+    "            if self.terminal is None or node.children[i].depth < self.terminal.depth:\n",
     "                self.terminal = node.children[i]\n",
     "\n",
     "        if node.children[i].depth > self.max_depth:\n",
@@ -168,7 +164,7 @@
     "                    continue\n",
     "                node.subtree_value += self.k_weight * i.subtree_value\n",
     "                valid_children += 1\n",
-    "        node.subtree_value /= valid_chlidren + 1\n",
+    "        node.subtree_value /= valid_children + 1\n",
     "        node.visits += 1\n",
     "        if node.parent is None:\n",
     "            return\n",
@@ -181,14 +177,15 @@
     "        :param comp_limit: max number of possible future scenarios to compute (carries over)\n",
     "        :return: index corresponding to best action\n",
     "        \"\"\"\n",
-    "        if root.is_terminal:\n",
+    "        self.root = root\n",
+    "        if self.root.is_terminal:\n",
     "            return True\n",
     "        comps = 0\n",
     "        while comps < comp_limit:\n",
-    "            node, comps = self.tree_policy(root, comps)\n",
+    "            node, comps = self.tree_policy(self.root, comps)\n",
     "            self.mean_prop(node)\n",
     "\n",
-    "        rv = self.pick_child(root)\n",
+    "        rv = self.pick_child(self.root)\n",
     "        \n",
     "        if False:\n",
     "            print(\"root state:\", root.state)\n",
@@ -201,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "id": "438fdf1c04168299",
    "metadata": {
     "collapsed": false
@@ -258,7 +255,8 @@
     "    def forward(self, x):\n",
     "        x = self.flatten(x)\n",
     "        x = self.stack(x).flatten()\n",
-    "        value = self.value_activation(x[0:1]).unsqueeze(0)\n",
+    "        # value = self.value_activation(x[0:1]).unsqueeze(0)\n",
+    "        value = x[0:1].reshape((1,1))\n",
     "        policy = torch.clamp(self.policy_activation(x[1:]).unsqueeze(0),min=1e-8,max=1-(1e-8))\n",
     "        return torch.cat((value, policy), dim=1)\n",
     "\n",
@@ -270,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "id": "f19bdb93248565c7",
    "metadata": {
     "collapsed": false
@@ -280,16 +278,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 10 \t\tLoss: 6.527867317199707\n",
-      "Epoch: 20 \t\tLoss: -23.659456253051758\n",
-      "Epoch: 30 \t\tLoss: 6.172438621520996\n",
-      "Epoch: 40 \t\tLoss: 6.452219009399414\n",
-      "Epoch: 50 \t\tLoss: 6.379735946655273\n",
-      "Epoch: 60 \t\tLoss: 5.2792158126831055\n",
-      "Epoch: 70 \t\tLoss: -26.06336212158203\n",
-      "Epoch: 80 \t\tLoss: 5.5235371589660645\n",
-      "Epoch: 90 \t\tLoss: -0.22800970077514648\n",
-      "Epoch: 100 \t\tLoss: -2.6788597106933594\n"
+      "Epoch: 10 \t\tLoss: 3175.7529296875\n",
+      "Epoch: 20 \t\tLoss: 8.311153411865234\n",
+      "Epoch: 30 \t\tLoss: 10.586368560791016\n",
+      "Epoch: 40 \t\tLoss: 15.929838180541992\n",
+      "Epoch: 50 \t\tLoss: 11.108878135681152\n",
+      "Epoch: 60 \t\tLoss: 18.10944366455078\n",
+      "Epoch: 70 \t\tLoss: 76.73344421386719\n",
+      "Epoch: 80 \t\tLoss: 19.893447875976562\n",
+      "Epoch: 90 \t\tLoss: 18156.896484375\n",
+      "Epoch: 100 \t\tLoss: 25.589523315429688\n"
      ]
     }
    ],
@@ -455,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "id": "caa3d0f193cdda2a",
    "metadata": {
     "collapsed": false
@@ -473,8 +471,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.4895\n",
-      "Guess Distribution: [1, 1999]\n"
+      "Test Accuracy: 0.49\n",
+      "Guess Distribution: [0, 2000]\n"
      ]
     }
    ],
