fix the data duplication error

--- a/heisenberg_group/Data_Generation/generate_heisenberg_w_BFS.ipynb
+++ b/heisenberg_group/Data_Generation/generate_heisenberg_w_BFS.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,46 +66,18 @@
     "        \"num_steps\": []\n",
     "    })\n",
     "\n",
-    "a_as_tuple = matrix_to_tuple(A)\n",
-    "b_as_tuple = matrix_to_tuple(B)\n",
-    "c_as_tuple = matrix_to_tuple(C)\n",
-    "d_as_tuple = matrix_to_tuple(D)\n",
     "I_as_tuple = matrix_to_tuple(I)\n",
     "\n",
     "cur_row_df = pd.DataFrame([[\n",
     "    I_as_tuple[0], I_as_tuple[1], I_as_tuple[2], \n",
     "    0, 0\n",
     "    ]], columns=['val1', 'val2', 'val3', 'last_matrix', 'num_steps'])\n",
-    "data = pd.concat([cur_row_df, data])\n",
-    "\n",
-    "cur_row_df = pd.DataFrame([[\n",
-    "    a_as_tuple[0], a_as_tuple[1], a_as_tuple[2], \n",
-    "    0, 1\n",
-    "    ]], columns=['val1', 'val2', 'val3', 'last_matrix', 'num_steps'])\n",
-    "data = pd.concat([cur_row_df, data])\n",
-    "\n",
-    "cur_row_df = pd.DataFrame([[\n",
-    "    b_as_tuple[0], b_as_tuple[1], b_as_tuple[2], \n",
-    "    1, 1\n",
-    "    ]], columns=['val1', 'val2', 'val3', 'last_matrix', 'num_steps'])\n",
-    "data = pd.concat([cur_row_df, data])\n",
-    "\n",
-    "cur_row_df = pd.DataFrame([[\n",
-    "    c_as_tuple[0], c_as_tuple[1], c_as_tuple[2], \n",
-    "    2, 1\n",
-    "    ]], columns=['val1', 'val2', 'val3', 'last_matrix', 'num_steps'])\n",
-    "data = pd.concat([cur_row_df, data])\n",
-    "\n",
-    "cur_row_df = pd.DataFrame([[\n",
-    "    d_as_tuple[0], d_as_tuple[1], d_as_tuple[2], \n",
-    "    3, 1\n",
-    "    ]], columns=['val1', 'val2', 'val3', 'last_matrix', 'num_steps'])\n",
     "data = pd.concat([cur_row_df, data])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -141,38 +113,6 @@
        "      <th>0</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -183,14 +123,10 @@
       ],
       "text/plain": [
        "   val1  val2  val3  last_matrix  num_steps\n",
-       "0   0.0   0.0  -1.0          3.0        1.0\n",
-       "0   0.0   0.0   1.0          2.0        1.0\n",
-       "0  -1.0   0.0   0.0          1.0        1.0\n",
-       "0   1.0   0.0   0.0          0.0        1.0\n",
        "0   0.0   0.0   0.0          0.0        0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +164,7 @@
     "    visited.add(matrix_to_tuple(start @ C))\n",
     "    visited.add(matrix_to_tuple(start @ D))\n",
     "    \n",
-    "    queue = deque([[A, 0, 1], [B, 1, 1], [C, 2, 1], [D, 3, 1]])\n",
+    "    queue = deque([[A, 1, 0], [B, 1, 1], [C, 1, 2], [D, 1, 3]])\n",
     "\n",
     "    while queue:\n",
     "        cur_item = queue.popleft()\n",
@@ -239,8 +175,8 @@
     "\n",
     "        cur_row_df = pd.DataFrame([[\n",
     "            cur_tuple[0], cur_tuple[1], cur_tuple[2], \n",
-    "            cur_neighbor, cur_index\n",
-    "            ]], columns=['val1', 'val2', 'val3', 'last_matrix', 'num_steps'])\n",
+    "            cur_index, cur_neighbor\n",
+    "            ]], columns=['val1', 'val2', 'val3', 'num_steps', 'last_matrix'])\n",
     "        myDF = pd.concat([cur_row_df, myDF])\n",
     "\n",
     "\n",
@@ -262,31 +198,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.to_csv(\"../Visualizations/bfs_heisenberg_data.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>val1</th>\n",
+       "      <th>val2</th>\n",
+       "      <th>val3</th>\n",
+       "      <th>num_steps</th>\n",
+       "      <th>last_matrix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260165</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260166</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260167</th>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260168</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260169</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>260170 rows × 5 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(189743, 5)"
+       "        val1   val2  val3  num_steps  last_matrix\n",
+       "0       20.0   36.0  -4.0       28.0          2.0\n",
+       "1       21.0   17.0  -5.0       28.0          2.0\n",
+       "2       22.0   -4.0  -6.0       28.0          0.0\n",
+       "3        6.0   87.0   4.0       28.0          1.0\n",
+       "4        9.0  107.0   5.0       28.0          1.0\n",
+       "...      ...    ...   ...        ...          ...\n",
+       "260165   0.0    0.0  -1.0        1.0          3.0\n",
+       "260166   0.0    0.0   1.0        1.0          2.0\n",
+       "260167  -1.0    0.0   0.0        1.0          1.0\n",
+       "260168   1.0    0.0   0.0        1.0          0.0\n",
+       "260169   0.0    0.0   0.0        0.0          0.0\n",
+       "\n",
+       "[260170 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.shape"
+    "data=data.reset_index(drop=True)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(260170, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(260170, 5)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(data.shape)\n",
+    "data.drop_duplicates().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data = data.drop_duplicates(subset=['val1', 'val2', 'val3'])\n",
+    "data.to_csv(\"../Data_Generation/Data_files/bfs_heisenberg_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>val1</th>\n",
+       "      <th>val2</th>\n",
+       "      <th>val3</th>\n",
+       "      <th>num_steps</th>\n",
+       "      <th>last_matrix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [val1, val2, val3, num_steps, last_matrix]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicate_rows = data[data.duplicated(keep=False)]\n",
+    "duplicate_rows"
    ]
   }
  ],
