--- a/heisenberg_group/Visualizations/viz_BFS.ipynb
+++ b/heisenberg_group/Visualizations/viz_BFS.ipynb
@@ -21,9 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../Data_Generation/Data_files/bfs_heisenberg_data.csv\")\n",
-    "\n",
-    "df = df.drop_duplicates()"
+    "df = pd.read_csv(\"../Data_Generation/Data_files/bfs_heisenberg_data.csv\")"
    ]
   },
   {
