was constructing BFS sequences in wrong order and group is not abelian. This fixes it.

--- a/heisenberg_group/Data_Generation/generate_heisenberg_w_BFS.ipynb
+++ b/heisenberg_group/Data_Generation/generate_heisenberg_w_BFS.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +30,13 @@
     "\n",
     "def apply_mat(mat, index):\n",
     "    if index==0:\n",
-    "        return mat @ A\n",
+    "        return A @ mat\n",
     "    elif index==1:\n",
-    "        return mat @ B\n",
+    "        return B @ mat\n",
     "    elif index==2:\n",
-    "        return mat @ C\n",
+    "        return C @ mat\n",
     "    elif index==3:\n",
-    "        return mat @ D\n",
+    "        return D @ mat\n",
     "    assert(1==2)\n",
     "\n",
     "# B is the inverse of A\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "0   0.0   0.0   0.0          0.0        0.0"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -232,43 +232,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>-4.0</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>-52.0</td>\n",
+       "      <td>-14.0</td>\n",
        "      <td>28.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>21.0</td>\n",
-       "      <td>17.0</td>\n",
        "      <td>-5.0</td>\n",
+       "      <td>-62.0</td>\n",
+       "      <td>-13.0</td>\n",
        "      <td>28.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>22.0</td>\n",
        "      <td>-4.0</td>\n",
-       "      <td>-6.0</td>\n",
+       "      <td>-70.0</td>\n",
+       "      <td>-12.0</td>\n",
        "      <td>28.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-76.0</td>\n",
+       "      <td>-11.0</td>\n",
        "      <td>28.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-80.0</td>\n",
+       "      <td>-10.0</td>\n",
        "      <td>28.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -279,7 +279,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260165</th>\n",
+       "      <th>246244</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.0</td>\n",
@@ -287,7 +287,7 @@
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260166</th>\n",
+       "      <th>246245</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -295,7 +295,7 @@
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260167</th>\n",
+       "      <th>246246</th>\n",
        "      <td>-1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -303,7 +303,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260168</th>\n",
+       "      <th>246247</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -311,7 +311,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>260169</th>\n",
+       "      <th>246248</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -320,27 +320,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>260170 rows × 5 columns</p>\n",
+       "<p>246249 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        val1   val2  val3  num_steps  last_matrix\n",
-       "0       20.0   36.0  -4.0       28.0          2.0\n",
-       "1       21.0   17.0  -5.0       28.0          2.0\n",
-       "2       22.0   -4.0  -6.0       28.0          0.0\n",
-       "3        6.0   87.0   4.0       28.0          1.0\n",
-       "4        9.0  107.0   5.0       28.0          1.0\n",
-       "...      ...    ...   ...        ...          ...\n",
-       "260165   0.0    0.0  -1.0        1.0          3.0\n",
-       "260166   0.0    0.0   1.0        1.0          2.0\n",
-       "260167  -1.0    0.0   0.0        1.0          1.0\n",
-       "260168   1.0    0.0   0.0        1.0          0.0\n",
-       "260169   0.0    0.0   0.0        0.0          0.0\n",
+       "        val1  val2  val3  num_steps  last_matrix\n",
+       "0       -6.0 -52.0 -14.0       28.0          0.0\n",
+       "1       -5.0 -62.0 -13.0       28.0          0.0\n",
+       "2       -4.0 -70.0 -12.0       28.0          0.0\n",
+       "3       -3.0 -76.0 -11.0       28.0          0.0\n",
+       "4       -2.0 -80.0 -10.0       28.0          0.0\n",
+       "...      ...   ...   ...        ...          ...\n",
+       "246244   0.0   0.0  -1.0        1.0          3.0\n",
+       "246245   0.0   0.0   1.0        1.0          2.0\n",
+       "246246  -1.0   0.0   0.0        1.0          1.0\n",
+       "246247   1.0   0.0   0.0        1.0          0.0\n",
+       "246248   0.0   0.0   0.0        0.0          0.0\n",
        "\n",
-       "[260170 rows x 5 columns]"
+       "[246249 rows x 5 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,23 +352,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(260170, 5)\n"
+      "(246249, 5)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(260170, 5)"
+       "(246249, 5)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
